# code-chunker

./: .gitignore  CONTRIBUTING.md  Chunker.py  CodeParser.py  LICENSE  MANIFEST.in  README.md  app.py  code_chunker_input.py  mcp_main.py  mcp_server.py  mock_codefiles.json  pyproject.toml  requirements.txt  test_code_chunker.py  utils.py
.github/workflows/: main.yml
cintra/: documentation.json
tests/: test_base.py  test_css.py  test_golang.py  test_javascript.py  test_php.py  test_python.py  test_ruby.py  test_typescript.py
